# table_reservation_api

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  env.prod.example  env.test.example  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-04-10_initial_migration.py
app/: main.py
app/core/: config.py  logging.py  middleware.py
app/db/: __init__.py  session.py
app/errors/: __init__.py  base.py  exceptions.py  handlers.py
app/models/: __init__.py  reservation.py  table.py
app/repositories/: reservation_repository.py  table_repository.py
app/routers/: __init__.py
app/routers/v1/: reservation_router.py  table_router.py
app/schemas/: __init__.py  reservation.py  table.py
app/services/: reservation_service.py  table_service.py
tests/: conftest.py  test_reservations.py  test_tables.py
